<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtCostofService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cost_of_service"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="151dp"
        android:layout_height="30dp"
        android:layout_marginTop="12dp"
        android:text="@string/How_was_the_service"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.092"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCostofService" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="272dp"
        android:layout_height="146dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.167"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/rdoAmazing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amazing" />

        <RadioButton
            android:id="@+id/rdoGood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good" />

        <RadioButton
            android:id="@+id/rdoOkay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/okay" />
    </RadioGroup>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/round_up_tip"
        android:layout_width="358dp"
        android:layout_height="49dp"
        android:text="@string/Round_up_tip"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.394"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="197dp"
        android:layout_height="51dp"
        android:text="@string/calculate"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/round_up_tip"
        app:layout_constraintVertical_bias="0.179" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="99dp"
        android:layout_height="18dp"
        android:layout_marginTop="15dp"
        android:text="@string/tip_amount"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>